<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">野外定位系统</string>
    <string name="login">登陆界面</string>
    <string name="username">用户名:</string>
    <string name="password">密    码 ：</string>
        <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="get_bd_version">获取北斗软件版本</string>
    <string name="turn_on_light">开灯</string>
    <string name="turn_off_light">关灯</string>
    <string name="allow_join">允许入网</string>
    <string name="new_device_join">有新设备加入网络</string>
    <string name="open_file_failed">文件打开失败</string>
    <string name="open_file_error_format">文件格式不正确</string>
    <string name="open_file_none">您没有选择任何文件</string>
    <string name="empty_hint">文件夹为空</string>
    <string name="sdcard_unmonted_hint">请先挂载SD卡</string>
    <string name="update_firmware">升级固件</string>
    
    <string name="check_bin_title">正在检查文件合法性</string>
    <string name="updating_firmware">正在升级固件,请稍候</string>
    <string name="verifing_firmware">正在校验，请稍候</string>
    <string name="update_firmware_error">升级失败，请重启平板</string>
    <string name="update_firmware_success">升级成功</string>
    <string name="hand_shake_success">已进入烧录模式，请点击升级固件按钮升级</string>
    <string name="select_update_option">请选择要升级的选项</string>
    <string name="firmware">固件</string>
    <string name="application">应用</string>
    <string name="select_update_file">请选择升级文件</string>
    <string name="update_firmware_changing_mode">正在切换模式</string>
    <string name="update_firmware_time_out">升级超时，请重新开始升级</string>
    <string name="please_wait">请稍等……</string>
    
    <string name="write_id">写id</string>
    <string name="input_id">输入id</string>
    <string name="write_id_success">写id成功</string>
    <string name="write_id_fail">写id失败</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="device_address">设备短地址:</string>
    <string name="device_type">  设备类型:</string>
    <string name="device_id">  设备ID:</string>
    <string name="device_parent_address">  父节点短地址:</string>
    <string name="get_firmware_info">获取固件信息</string>
    <string name="control_led">控制LED</string>
    <string name="request_join">请求入网</string>
</resources>
